another commit or whatever

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,4 +3,4 @@
   uni: LinkedIn Learning 
   year: June, 2014 &mdash; January, 2019
   # awards:
-  # summary:
+  # summary:yeah needed to add a bit of a summary
